New Debian revision 1.0-2.
This revision removes the ll2utm and utm2ll manpages from the source
package and no longer installs the binaries for ll2utm and utm2ll.

This is in response to piuparts complaints that these binaries conflict
with binaries in the drawmap package, and these binaries are not
critical to the use of direwolf. See bug #768223.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+direwolf (1.0-2) unstable; urgency=medium
+
+  * No longer install the ll2utm or utm2ll binaries or man pages. (Closes:
+    #768223)
+
+ -- Iain R. Learmonth <irl@fsfe.org>  Fri, 07 Nov 2014 13:40:27 +0000
+
 direwolf (1.0-1) unstable; urgency=medium
 
   * Initial release. (Closes: #759639)
