--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-direwolf (1.1-1) UNRELEASED; urgency=medium
+direwolf (1.1-1) unstable; urgency=medium
 
   * Update to new upstream version 1.1.
 
- -- Iain R. Learmonth <irl@fsfe.org>  Sun, 01 Feb 2015 22:37:47 +0000
+ -- Iain R. Learmonth <irl@fsfe.org>  Thu, 05 Feb 2015 00:32:28 +0000
 
 direwolf (1.0-3) unstable; urgency=medium
 
