--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+direwolf (1.1-2) unstable; urgency=medium
+
+  * Added a Breaks+Replaces as files have moved between packages. (Closes:
+    #777674)
+
+ -- Iain R. Learmonth <irl@fsfe.org>  Wed, 11 Feb 2015 14:52:06 +0000
+
 direwolf (1.1-1) unstable; urgency=medium
 
   * Update to new upstream version 1.1.
