--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+direwolf (1.3-1.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * Service file added (Closes: #808827) 
+
+ -- Ana Custura <ana@netstat.org.uk>  Mon, 12 Sep 2016 18:06:43 +0100
+
 direwolf (1.3-1) unstable; urgency=medium
 
   * New upstream version
