--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-direwolf (1.3-1.1) UNRELEASED; urgency=medium
+direwolf (1.3-2) unstable; urgency=medium
 
-  * Non-maintainer upload.
-  * Service file added (Closes: #808827) 
+  * Team upload
+  * Added systemd service file (Closes: #808827) 
 
- -- Ana Custura <ana@netstat.org.uk>  Mon, 12 Sep 2016 18:06:43 +0100
+ -- Ana Custura <ana@netstat.org.uk>  Sun, 18 Sep 2016 14:24:50 +0100
 
 direwolf (1.3-1) unstable; urgency=medium
 
