New upstream version 1.5+orig

--- a/man1/direwolf.1
+++ b/man1/direwolf.1
@@ -27,8 +27,12 @@ RMS Express, and many others.
 Read configuration file from specified location rather than the default locations.
 
 .TP
-.BI "-l " "dir"
-Generate log files in specified directory.  Use "." for current directory.
+.BI "-l " "logdir"
+Generate daily log files in specified directory.  Use "." for current directory.
+
+.TP
+.BI "-L " "logfile"
+Generate single log file with fixed name.
 
 .TP
 .BI "-r " "n"
@@ -135,18 +139,18 @@ gqrx (2.3 and later) has the ability to send streaming audio through a UDP socke
 direwolf can listen over a UDP port with options like this:
 .RS
 .P
-direwolf -n 1 -r 48000 -b 16 udp:7355
+direwolf \-n 1 \-r 48000 \-b 16 udp:7355
 .RE
 .P
 Other SDR applications might produce audio on stdout so it is convenient to pipe into the next application.  In this example, the final "-" means read from stdin.
 .RS
 .P
-rtl_fm -f 144.39M -o 4 - | direwolf -n 1 -r 24000 -b 16 -
+rtl_fm \-f 144.39M \-o 4 \- | direwolf \-n 1 \-r 24000 \-b 16 \-
 .RE
 
 
 .SH SEE ALSO
 More detailed information is in the pdf files in /usr/local/share/doc/direwolf, or possibly /usr/share/doc/direwolf, depending on installation location.
 
-Applications in this package: aclients, atest, decode_aprs, direwolf, gen_packets, ll2utm, log2gpx, text2tt, tt2text, utm2ll
+Applications in this package: aclients, atest, decode_aprs, direwolf, gen_packets, kissutil, ll2utm, log2gpx, text2tt, tt2text, utm2ll
 
