--- a/man1/gen_packets.1
+++ b/man1/gen_packets.1
@@ -5,12 +5,12 @@ gen_packets \- Generate audio file for AX.25 frames.
 
 
 .SH SYNOPSIS
-.B gen_packets -o 
+.B gen_packets \-o
 .I wav-file-out 
-[ \fIoptions\fR ] [ \fItext-file\fR | - ]
+[ \fIoptions\fR ] [ \fItext-file\fR | \- ]
 .RS
 .P
-\fIwav-file-out\fR is the result.  The -o option is required.
+\fIwav-file-out\fR is the result.  The \-o option is required.
 .P
 \fItext-file\fR may contain AX.25 packets in the standard monitoring format.  Use "-" to read from stdin.  If not specified, a default builtin message will be used.
 .RE
@@ -25,7 +25,7 @@ It is very flexible allowing a wide range of audio sample rates, data speeds, an
 
 .TP
 .BI  "-a " "n"
-Signal amplitude in range of 0 - 200%.  Default 50.  Note that 100% is corresponds to signal peaks of +/- 16383 so we have plenty of headroom to avoid saturation.
+Signal amplitude in range of 0-200%.  Default 50.  Note that 100% is corresponds to signal peaks of +/- 16383 so we have plenty of headroom to avoid saturation.
 
 .TP
 .BI  "-b " "n"
@@ -70,7 +70,7 @@ Send output to .wav file.
 
 .SH EXAMPLES
 .P
-.B gen_packets -o x.wav
+.B gen_packets \-o x.wav
 .P
 .RS
 With all defaults, a built-in test message is generated
@@ -78,27 +78,27 @@ with standard Bell 202 tones used for packet radio on ordinary
 VHF FM transceivers.
 .RE
 .P
-.B gen_packets -o x.wav -g -b 9600
+.B gen_packets \-o x.wav \-g \-b 9600
 .PD 0
 .P
 .PD
-.B gen_packets -o x.wav -B 9600
+.B gen_packets \-o x.wav \-B 9600
 .P
 .RS
 Both of these are equivalent.  "-B 9600" automatically selects scrambled baseband rather than AFSK.
 .RE
 .P
-.B gen_packets -o x.wav -m 1600 -s 1800 -b 300
+.B gen_packets \-o x.wav \-m 1600 \-s 1800 \-b 300
 .PD 0
 .P
 .PD
-.B gen_packets -o x.wav -B 300
+.B gen_packets \-o x.wav \-B 300
 .P
 .RS
 Both of these generate 200 Hz shift, 300 baud, suitable for HF SSB transceiver.
 .RE
 .P
-.B echo -n 'WB2OSZ>WORLD:Hello, world!' | gen_packets -a 25 -o x.wav -
+.B echo \-n 'WB2OSZ>WORLD:Hello, world!' | gen_packets \-a 25 \-o x.wav \-
 .PD 0
 .P
 .PD
