--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+direwolf (1.5+dfsg-2) unstable; urgency=medium
+
+  [ Christian Ehrhardt ]
+  * Adds compatibility for newer GPSD versions (Closes: #926549)
+
+  [ Iain R. Learmonth ]
+  * Adds support for hamlib rig control
+    - New build dependency libhamlib-dev
+
+ -- Iain R. Learmonth <irl@debian.org>  Tue, 09 Jul 2019 09:51:48 +0100
+
 direwolf (1.5+dfsg-1) experimental; urgency=medium
 
   * New upstream version 1.5+dfsg
