--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+direwolf (1.5+dfsg-3) unstable; urgency=medium
+
+  [ Bernd Zeimetz ]
+  * Don't be strict about the GPSD API (Closes: #926549)
+
+  [ Iain R. Learmonth ]
+  * d/control: Standards version to 4.4.1
+
+ -- Iain R. Learmonth <irl@debian.org>  Mon, 28 Oct 2019 19:01:15 +0000
+
 direwolf (1.5+dfsg-2) unstable; urgency=medium
 
   [ Christian Ehrhardt ]
@@ -54,7 +64,7 @@ direwolf (1.4+dfsg-1) unstable; urgency=medium
 direwolf (1.3-2) unstable; urgency=medium
 
   * Team upload
-  * Added systemd service file (Closes: #808827) 
+  * Added systemd service file (Closes: #808827)
 
  -- Ana Custura <ana@netstat.org.uk>  Sun, 18 Sep 2016 14:24:50 +0100
 
