--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+direwolf (1.6+dfsg-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Sat, 02 Jan 2021 13:26:41 +0100
+
 direwolf (1.5+dfsg-5) unstable; urgency=medium
 
   [ Debian Janitor ]
