--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+direwolf (1.6+dfsg-2) UNRELEASED; urgency=medium
+
+  * Restrict again to linux-any. In theory other OSes are supported via
+    liboss4-salsa-dev but that is lacking snd_pcm_recover so don't bother
+    porting for now.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 03 Jan 2021 23:37:00 +0100
+
 direwolf (1.6+dfsg-1) unstable; urgency=medium
 
   * New upstream version, buildsystem switched to cmake.
