Override lintian warning
Overrides the following lintian warning:
W desktop-command-not-in-package usr/share/applications/direwolf.desktop usr/bin/x-terminal-emulator

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ direwolf (1.6+dfsg-2.1) UNRELEASED; urgency=medium
 
   * Put link to online PDF documentation in man pages and fix it
     in --help output.
-  * Fix Lintian warnings for d/copyright.
+  * Fix/override Lintian warnings.
 
  -- Daniele Forsi <iu5hkx@gmail.com>  Wed, 03 Nov 2021 18:37:33 +0100
 
