--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,10 @@
-direwolf (1.6+dfsg-2.1) UNRELEASED; urgency=medium
-
-  * Put link to online PDF documentation in man pages and fix it
-    in --help output.
-  * Fix/override Lintian warnings.
-
- -- Daniele Forsi <iu5hkx@gmail.com>  Wed, 03 Nov 2021 18:37:33 +0100
-
 direwolf (1.6+dfsg-2) UNRELEASED; urgency=medium
+  [ Daniele Forsi ]
+  * Put link to online PDF documentation in man pages and fix link
+    in --help output.
+  * Fix/override Lintian warnings and lintian-brush warnings.
 
+  [ Christoph Berg ]
   * Restrict again to linux-any. In theory other OSes are supported via
     liboss4-salsa-dev but that is lacking snd_pcm_recover so don't bother
     porting for now.
