--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+direwolf (1.7-dev+dfsg-1~bpo12+1) bookworm; urgency=medium
+
+  * Rebuild for bookworm-backports. 
+
+ -- Dave Hibberd <d@vehibberd.com>  Tue, 29 Aug 2023 22:29:18 +0100
+
 direwolf (1.7-dev+dfsg-1) UNRELEASED; urgency=medium
 
   * Added 1.7 from upstream
